--- a/locales/en.yml
+++ b/locales/en.yml
@@ -20,6 +20,9 @@ main_page:
         received: Received
         system: System
 
+        show_resend_button: Show Resend Button
+        resend_button_on_hover_desc: Press and hold to send
+
     # textbox_system_message:
     #     enabled_easter_egg: Whoa! You caught us! There is something...like...easter-egg-ish function has enabled! It'll affect to Overlay(VR) for now;).
     #     enabled_translation: Translation feature is turned on.
