--- a/locales/en.yml
+++ b/locales/en.yml
@@ -181,9 +181,7 @@ config_page:
             label: Select Transcription Engine
         whisper_weight_type:
             label: Select Whisper Model
-            desc: |-
-                Generally, models with larger capacity tend to have higher accuracy, but this also results in longer transcription times and increased CPU usage. Please refer to the documentation for explanations of each model.
-                ※Larger models, especially those exceeding medium size, can be challenging to run even depending on the CPU's performance.
+            desc: Models with larger capacities tend to have higher accuracy, but they also consume more CPU and GPU resources.
             model_template: '{{model_name}} model ({{capacity}})'
             recommended_model_template: '{{model_name}} model ({{capacity}}) (Recommended)'
         whisper_compute_device:
