--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -193,14 +193,20 @@ config_page:
         restore_default_settings: 初期値に戻す
         position: 位置
         rotation: 回転
-        opacity: 透明度
-        ui_scaling: サイズ
         x_position: X軸（左右）
         y_position: Y軸（上下）
         z_position: Z軸（前後）
         x_rotation: X軸の回転
         y_rotation: Y軸の回転
         z_rotation: Z軸の回転
+        sample_text_button:
+            start: |-
+                サンプルテキストを
+                Overlayに送信する
+            stop: 送信を停止
+            sample_text: サンプルテキスト
+        opacity: 透明度
+        ui_scaling: サイズ
         display_duration: 表示時間
         fadeout_duration: フェードアウト時間
         common_settings: 共通設定
